--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -3,7 +3,7 @@ name: Run unit linters and unit tests
 on: 
   push:
     branches:
-     - feature_branch
+     - feature
 
 jobs:
   linter_and_unit_tests:
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install conda
-      uses: conda-incubator/setup-miniconda@v
+      uses: conda-incubator/setup-miniconda@v2
       with:
         python-version: '3.9'
         miniconda-version: "latest"
