--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -9,26 +9,35 @@ jobs:
     strategy:
       max-parallel: 5
     steps:
-      - uses: actions/checkout@v3
-      - uses: conda-incubator/setup-miniconda@v2
+      - name: Checkout branch
+        uses: actions/checkout@v3
+
+      - name: Install anaconda
+        uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: "3.9"
           miniconda-version: latest
+
       - name: Intsall JDK
         run: |
           conda install -c conda-forge openjdk=11.0.15
+
       - name: Pip install all requirements
         run: |
           pip install -e ".[local,test]"
+
       - name: Run isort
         run: |
           isort ./training_templates
+
       - name: Run black
         run: |
           black ./training_templates
+
       - name: Run mypy
         run: |
           mypy ./training_templates
+          
       - name: Run unit tests
-      - run: |
+        run: |
           pytest ./tests -v
