--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "training-templates"
 version = "0.0.1"
 description = "A collection of templated workflows for machine learning model training."
 readme = "README.md"
-dependencies = ["pyyaml"]
+dependencies = []
 requires-python = ">=3.7"
 
 # https://pypi.org/project/pip-tools/
