--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run mypy
         run: |
-          mypy ./training_templates
+          mypy --package training_templates
 
       - name: Run unit tests
         run: |
