--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ requires-python = ">=3.7"
 # https://pypi.org/project/pip-tools/
 # https://hynek.me/til/pip-tools-and-pyproject-toml/
 [project.optional-dependencies]
-local = ["pyspark>=3.0", "delta-spark>=2.0"]
+local = ["pyspark>=3.0", "delta-spark>=2.0", "pre-commit"]
 test = ["pytest>=7.0", "coverage[toml]", "pytest-cov", "isort", "black", "mypy"]
 
 [tool.mypy]
