check black formatting

--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Run black
         run: |
-          black ./training_templates
+          black ./training_templates --check
 
       - name: Run mypy
         run: |
