--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,8 +1,9 @@
 name: Run unit linters and unit tests
-on:
-  push:
+on: 
+  pull_request:
+    types: [opened]
     branches:
-      - feature
+     - master
 jobs:
   linter_and_unit_tests:
     runs-on: ubuntu-latest
