--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -4,6 +4,9 @@ on:
     types: [opened]
     branches:
      - master
+    paths:
+      - training_templates/**
+
 jobs:
   linter_and_unit_tests:
     runs-on: ubuntu-latest
