--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -30,7 +30,7 @@ jobs:
         git config --global user.email "carter.marshall@gmail.com"
         git config --global user.name "marshackVB"
 
-    name: Push changes
+    - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
