--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: '3.9'
     - uses: actions/checkout@v3
-      run: |
+    - run: |
         pip install build
         python -m build
         git config --global user.email "carter.marshall@gmail.com"
