--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -1,10 +1,9 @@
 # Package the libray using build (ahttps://pypa-build.readthedocs.io/en/latest/)
 
-on:
-  release:
-    types: [released]
-    branches: 
-      -master
+on: 
+  push:
+    branches:
+     - master
 
 jobs:
   build_package:
