--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -20,8 +20,12 @@ jobs:
       with:
         ref: master
     - run: |
+        git config user.email "carter.marshall@gmail.com"
+        git config user.name "marshackVB"
+        
+    - run: |
         pip install build
-        python -m build
-        git config --global user.email "carter.marshall@gmail.com"
-        git config --global user.name "marshackVB"
-        git commit -a -m "Update wheel release version"
+        python3 -m build
+        git add -f ./dist/*.whl
+        git commit -m 'Update wheel release version'
+        git push
