--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "training-templates"
-dynamic = ["version"]
+dynamic = ["version", "dependencies"]
 description = "A collection of templated workflows for machine learning model training with hyperopt and mlflow integration."
 readme = "README.md"
-dependencies = ["scikit-learn>=1.0", "pandas>=1.0", "mlflow-skinny>=2.0", "xgboost>=1.0"]
 requires-python = ">=3.7"
 
 [tool.setuptools.dynamic]
 version = {file = "training_templates/VERSION"}
+dependencies = {file = "requirements.txt"}
 
 [tool.setuptools.package-data]
 "training_templates" = ["data/*.csv"]
